package mei.designpattern.flyweight.GoChess;

public class BlackChess extends GoChess {
    public String getColor() {
        return "Black go chess";
    }
}
