package mei.designpattern.flyweight.GoChess;

public class WhiteChess extends GoChess {
    @Override
    public String getColor() {
        return "Write go chess";
    }
}
